feat: key-value for auto refilling added
